programs/2-typecheck/invalid/example/3.11-for1.go
// expr condition in for statement is not type bool
package test

func main() {
	for i := 0; i; i++ {
		print(i)
	}
}
